Finished rock paper scissors game for Odin Project Worked on building my problem solving skills by breaking this game into easier steps. Than solving one by one.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     </head>
     <body>
         
+        <div>
+
+            <div><h2>Computer Choice: <span id="computer-choice"></span></h2></div>
+
+            <div><h2>User Choice: <span id="user-choice"></span></h2></div>
+
+            <div><h2>Results: <span id="results"></span></h2></div>
+
+        </div>
+        <div>
+            <h2>Make a Choice</h2>
+
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+
+
+        </div>
         
         <script src="./script.js" async defer></script>
     </body>
